# catalyst-e2e

./: .env.sample  Cargo.toml  Dockerfile  README.md  deny.toml
.githooks/: pre-push
.github/workflows/: e2e_stack_pytest.yml  e2e_tests.yml  node_docker_build.yml  p2p_node_docker_build.yml  pytest_docker_build.yml_old  rust_dependency_audit.yml  tools_spammer_docker_build.yml
common/: Cargo.toml
common/src/: lib.rs
common/src/batch_builder/: config.rs  core.rs  mod.rs  traits.rs
common/src/blob/: blob_parser.rs  mod.rs
common/src/chain_monitor/: batch_proposed_receiver.rs  l2_block_receiver.rs  mod.rs
common/src/config/: config_trait.rs  mod.rs
common/src/crypto/: golden_touch.rs  mod.rs
common/src/fork_info/: config.rs  fork.rs  mod.rs
common/src/funds_controller/: config.rs  mod.rs
common/src/l1/: bindings.rs  blob_indexer.rs  config.rs  consensus_layer.rs  ethereum_l1.rs  fees_per_gas.rs  mod.rs  slot_clock.rs  tools.rs  transaction_error.rs
common/src/l1/test_data/: blob_indexer_response.json
common/src/l1/traits/: el_trait.rs  mod.rs  preconfer_bond_provider.rs  preconfer_provider.rs
common/src/l2/: engine.rs  mod.rs
common/src/l2/taiko_driver/: config.rs  mod.rs  models.rs  status_provider_trait.rs
common/src/l2/traits/: bridgeable.rs  mod.rs
common/src/metrics/: mod.rs  server.rs
common/src/shared/: alloy_tools.rs  anchor_block_info.rs  execution_layer.rs  head_verifier.rs  l2_block_v2.rs  l2_slot_info.rs  l2_slot_info_v2.rs  l2_tx_lists.rs  mod.rs  transaction_monitor.rs
common/src/signer/: mod.rs
common/src/utils/: cancellation_token.rs  event_listener.rs  mod.rs  rpc_client.rs  synchronization.rs  watchdog.rs
docs/: permissionless-design-doc.md  progress-report-oct-2024.md  whitelist-launch-specs.md
e2e_tests/: .env.example  .env.example.shasta  README.md  chain_info.py  conftest.py  forced_inclusion_store.py  requirements.txt  taiko_inbox.py  test_avs_node.py  test_forced_inclusion.py  test_preocnfirmation_after_restart.py  utils.py
node/: Cargo.toml
node/src/: main.rs  test_gas.rs
node/src/test_gas/: mod.rs
node/src/test_gas_params/: mod.rs
pacaya/: Cargo.toml
pacaya/src/: lib.rs
pacaya/src/chain_monitor/: mod.rs  whitelist_monitor.rs
pacaya/src/forced_inclusion/: mod.rs
pacaya/src/l1/: bindings.rs  config.rs  execution_layer.rs  mod.rs  propose_batch_builder.rs  protocol_config.rs  traits.rs
pacaya/src/l2/: bindings.rs  config.rs  execution_layer.rs  mod.rs  taiko.rs
pacaya/src/node/: config.rs  mod.rs  verifier.rs
pacaya/src/node/batch_manager/: batch.rs  batch_builder.rs  config.rs  mod.rs
pacaya/src/node/operator/: mod.rs  status.rs  tests.rs
pacaya/src/utils/: config.rs
permissionless/: Cargo.toml
permissionless/src/: lib.rs
permissionless/src/l1/: config.rs  execution_layer.rs  mod.rs
permissionless/src/node/: config.rs  mod.rs
permissionless/src/registration/: registry.rs
permissionless/src/utils/: config.rs
shasta/: Cargo.toml
shasta/src/: lib.rs
shasta/src/chain_monitor/: mod.rs
shasta/src/forced_inclusion/: mod.rs
shasta/src/l1/: config.rs  execution_layer.rs  mod.rs  proposal_tx_builder.rs  protocol_config.rs
shasta/src/l2/: execution_layer.rs  extra_data.rs  mod.rs  taiko.rs
shasta/src/node/: l2_height_from_l1.rs  mod.rs  verifier.rs
shasta/src/node/proposal_manager/: batch_builder.rs  l2_block_payload.rs  mod.rs  proposal.rs
shasta/src/utils/: config.rs
tools/p2p_node/: Dockerfile
tools/p2p_node/p2p_boot_node/: Dockerfile
tools/p2p_node/p2p_boot_node/src/: main.rs
tools/tx_spammer/: tx_spammer.py
urc/: .env.sample  Cargo.toml  Makefile  docker-compose.yaml
urc/src/: lib.rs
urc/src/bindings/: mod.rs
urc/src/bindings/abi/: ILookaheadStore.json
urc/src/cli/: bls.rs  commands.rs  main.rs
urc/src/lookahead/: lookahead_builder.rs  mod.rs  types.rs
urc/src/monitor/: config.rs  db.rs  main.rs  mod.rs  registry_monitor.rs
