
[workspace]
members = [
    "common",
    "node",
    "pacaya",
    "permissionless",
    "shasta",
    "tools/p2p_node/p2p_boot_node",
    "urc",
]
resolver = "2"
default-members = ["node"]

[workspace.package]
version = "1.28.2"
edition = "2024"
repository = "https://github.com/NethermindEth/Catalyst"
license = "MIT"

[workspace.dependencies]
alloy = { version = "1.5", default-features = false, features = [
    "full",
    "node-bindings",
    "rlp",
    "rpc-types-beacon",
    "rpc-types",
    "kzg",
] }
alloy-json-rpc = { version = "1.5", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
anyhow = { version = "1", default-features = false }
async-trait = { version = "0.1", default-features = false }
blst = { version = "0.3", default-features = false }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
] }
clap = { version = "4.5", default-features = false, features = [
    "std",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "derive",
] }
common = { path = "common" }
discv5 = { version = "0.10", default-features = false, features = ["libp2p"] }
dotenvy = { version = "0.15", default-features = false }
ecdsa = { version = "0.16", default-features = false }
elliptic-curve = { version = "0.13", default-features = false }
flate2 = { version = "1.1", default-features = false, features = ["zlib"] }
futures = { version = "0.3.31", default-features = false }
futures-util = { version = "0.3", default-features = false }
hex = { version = "0.4", default-features = false }
http = { version = "1.4", default-features = false }
jsonrpsee = { version = "0.26", default-features = false, features = [
    "http-client",
    "server",
] }
jsonwebtoken = { version = "10.2", default-features = false, features = [
    "aws_lc_rs",
] }
k256 = { version = "0.13", default-features = false, features = [
    "arithmetic",
    "ecdsa",
    "pkcs8",
    "precomputed-tables",
    "schnorr",
    "std",
] }
lazy_static = { version = "1.5", default-features = false }
mockito = { version = "1.7", default-features = false }
pacaya = { path = "pacaya" }
permissionless = { path = "permissionless" }
prometheus = { version = "0.14", default-features = false }
rand = { version = "0.9", default-features = false }
rand_core = { version = "0.9", default-features = false }
reqwest = { version = "0.13", default-features = true, features = ["json"] }
rustls = { version = "0.23", default-features = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
shasta = { path = "shasta" }
strum = { version = "0.27", features = ["derive"] }

taiko_alethia_reth = { git = "https://github.com/taikoxyz/alethia-reth.git", rev = "3e0fdad9b9fbf7f6550c7209185fd6623468452c", package = "alethia-reth-consensus" }
taiko_bindings = { git = "https://github.com/taikoxyz/taiko-mono.git", rev = "34c446de200a0856863615936c8ce1e94097981f", package = "bindings" }
taiko_protocol = { git = "https://github.com/taikoxyz/taiko-mono.git", rev = "34c446de200a0856863615936c8ce1e94097981f", package = "protocol" }
taiko_rpc = { git = "https://github.com/taikoxyz/taiko-mono.git", rev = "34c446de200a0856863615936c8ce1e94097981f", package = "rpc" }
tokio = { version = "1.49", default-features = false, features = ["full"] }
tokio-util = { version = "0.7", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "env-filter",
] }
urc = { path = "urc" }
warp = { version = "0.4", default-features = false, features = ["server"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
cast_lossless = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
needless_return = "deny"
panicking_overflow_checks = "deny"
unwrap_used = "deny"

[profile.release]
overflow-checks = true
