[package]
name = "common"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[features]
test-gas = []

[dependencies]
alloy = { workspace = true }
alloy-json-rpc = { workspace = true }
alloy-rlp = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
ecdsa = { workspace = true }
elliptic-curve = { workspace = true }
flate2 = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
http = { workspace = true }
jsonrpsee = { workspace = true }
jsonwebtoken = { workspace = true }
k256 = { workspace = true }
lazy_static = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
taiko_protocol = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
warp = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["arbitrary"] }
mockito = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }

[lints]
workspace = true
