[package]
name = "node"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "catalyst_node"
path = "src/main.rs"

[[bin]]
name = "test_gas"
path = "src/test_gas.rs"

[dependencies]
alloy = { workspace = true }
alloy-json-rpc = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
common = { workspace = true }
pacaya = { workspace = true }
permissionless = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
shasta = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
