[package]
name = "urc"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "urc-cli"
path = "src/cli/main.rs"

[[bin]]
name = "urc-monitor"
path = "src/monitor/main.rs"

[dependencies]
alloy = { workspace = true }
alloy-json-rpc = { workspace = true }
anyhow = { workspace = true }
blst = { workspace = true }
clap = { workspace = true }
common = { workspace = true }
dotenvy = { workspace = true }
rand_core = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "mysql", "any", "macros"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
